--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,16 @@
 </head>
 
 <body>
+  <!--
+      Il reste un problème avec le formulaire de connexion dans le fichier "DéfiPage js' ligne 125/131
+      Pour ça il vous faut vous diriger dans l'ongler Sources et chercher le dossier "Static'" et plus loin dans l'arboresense le dossier 'Src' 
+    -->
   <style>
     body {
       margin: 0
     }
   </style>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
 </body>
 
 </html>
